--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Visor 360° Mejorado</title>
+  <title>Visor 360° Mejorado - Touch Preciso</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     .viewer {
       position: relative;
-      width: 50%;
+      width: 100%;
       height: 400px;
       display: flex;
       justify-content: center;
       align-items: center;
       cursor: grab;
-      border-radius: 1rem;
     }
 
     .viewer img {
@@ -46,7 +46,8 @@
     const totalFrames = 30; 
     let isDragging = false;
     let startX = 0;
-    let velocity = 0; // Velocidad del arrastre
+    let accumulatedMovement = 0; // Movimiento acumulado para mayor precisión
+    const frameChangeThreshold = 10; // Cuántos píxeles se necesitan para cambiar de frame
     const productImage = document.getElementById('productImage');
     let currentColor = 'red'; 
     
@@ -81,24 +82,32 @@
       }
     });
 
+    // --- Función específica para manejar el arrastre con el mouse ---
     function handleMouseDrag(diff) {
-      velocity = Math.abs(diff) / 50; // Aumentar la velocidad según el arrastre
-      const framesToMove = Math.min(Math.max(Math.floor(velocity), 1), 5); // Limitar el número de frames a mover (1-5)
+      accumulatedMovement += diff;
 
-      if (Math.abs(diff) > 5) {
-        currentFrame += diff < 0 ? framesToMove : -framesToMove;
+      // Manejamos el movimiento acumulado para ambos lados
+      if (Math.abs(accumulatedMovement) > frameChangeThreshold) {
+        const framesToMove = Math.floor(accumulatedMovement / frameChangeThreshold);
+        currentFrame -= framesToMove; // Invertimos el signo para cambiar el sentido de giro
 
+        // Ciclar a través de los frames
         if (currentFrame > totalFrames) currentFrame = 1;
         if (currentFrame < 1) currentFrame = totalFrames;
 
         updateImage();
+
+        // Restar el movimiento acumulado correctamente para evitar desincronización
+        accumulatedMovement = accumulatedMovement % frameChangeThreshold;
       }
     }
 
     // --- Controladores para dispositivos táctiles ---
     viewer.addEventListener('touchstart', (event) => {
-      isDragging = true;
-      startX = event.touches[0].pageX;
+      if (event.touches.length === 1) { // Solo manejamos un toque
+        isDragging = true;
+        startX = event.touches[0].pageX;
+      }
     });
 
     viewer.addEventListener('touchend', () => {
@@ -106,28 +115,34 @@
     });
 
     viewer.addEventListener('touchmove', (event) => {
-      if (isDragging) {
+      if (isDragging && event.touches.length === 1) {
         const diff = event.touches[0].pageX - startX;
         handleTouchDrag(diff);
         startX = event.touches[0].pageX;
       }
     });
 
+    // --- Función específica para manejar el arrastre con touch ---
     function handleTouchDrag(diff) {
-      velocity = Math.abs(diff) / 100;
-      const framesToMove = Math.min(Math.max(Math.floor(velocity), 1), 5);
+      accumulatedMovement += diff;
 
-      if (Math.abs(diff) > 5) {
-        currentFrame += diff < 0 ? framesToMove : -framesToMove;
+      // Manejamos el movimiento acumulado para touch
+      if (Math.abs(accumulatedMovement) > frameChangeThreshold) {
+        const framesToMove = Math.floor(accumulatedMovement / frameChangeThreshold);
+        currentFrame -= framesToMove; // Invertimos el signo para cambiar el sentido de giro
 
+        // Ciclar a través de los frames
         if (currentFrame > totalFrames) currentFrame = 1;
         if (currentFrame < 1) currentFrame = totalFrames;
 
         updateImage();
+
+        // Restar el movimiento acumulado correctamente para evitar desincronización
+        accumulatedMovement = accumulatedMovement % frameChangeThreshold;
       }
     }
 
-    // Actualizar la imagen
+    // Función para actualizar la imagen
     function updateImage() {
       productImage.src = `images/${currentColor}/${currentFrame}.png`;
     }
@@ -137,7 +152,7 @@
     colorButtons.forEach(button => {
       button.addEventListener('click', () => {
         currentColor = button.getAttribute('data-color');
-        /*currentFrame = 1; */
+        currentFrame = 1; 
         updateImage();
       });
     });
