--- a/index2.html
+++ b/index2.html
@@ -2,11 +2,11 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Visor 360° con cambio de color y arrastre continuo</title>
+  <title>Visor 360° Mejorado - Touch Preciso</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    /* Estilos adicionales */
     .viewer {
       position: relative;
       width: 100%;
@@ -36,78 +36,124 @@
 
   <!-- Botones para cambiar de color -->
   <div class="flex space-x-4">
-    <button class="bg-red-500 text-white px-4 py-2 rounded" data-color="red">Rojo</button>
+    <button class="bg-white text-black px-4 py-2 rounded" data-color="red">Blanco</button>
     <button class="bg-blue-500 text-white px-4 py-2 rounded" data-color="blue">Azul</button>
-    <button class="bg-green-500 text-white px-4 py-2 rounded" data-color="green">Verde</button>
+    <button class="bg-red-500 text-white px-4 py-2 rounded" data-color="green">Rojo</button>
   </div>
 
   <script>
-    // Variables de control para el visor 360°
     let currentFrame = 1;
-    const totalFrames = 30; // Número total de imágenes en cada color
+    const totalFrames = 30; 
     let isDragging = false;
     let startX = 0;
+    let accumulatedMovement = 0; // Movimiento acumulado para mayor precisión
+    const frameChangeThreshold = 10; // Cuántos píxeles se necesitan para cambiar de frame
     const productImage = document.getElementById('productImage');
-    let currentColor = 'red'; // Color inicial
+    let currentColor = 'red'; 
     
-    // Prevenir que se pueda arrastrar la imagen fuera del visor
     productImage.addEventListener('dragstart', (event) => {
-      event.preventDefault(); // Previene el comportamiento por defecto de arrastrar la imagen
+      event.preventDefault(); 
     });
 
-    // Obtener el visor para escuchar eventos
     const viewer = document.getElementById('productViewer');
 
-    // Detectar cuando el usuario comienza a arrastrar
+    // --- Controladores para el mouse ---
     viewer.addEventListener('mousedown', (event) => {
       isDragging = true;
-      startX = event.pageX; // Guardar la posición inicial
-      viewer.style.cursor = "grabbing"; // Cambiar el cursor al arrastrar
+      startX = event.pageX;
+      viewer.style.cursor = "grabbing";
     });
-    
-    // Detectar cuando el usuario suelta el botón del mouse
+
     viewer.addEventListener('mouseup', () => {
       isDragging = false;
-      viewer.style.cursor = "grab"; // Volver al cursor original
+      viewer.style.cursor = "grab";
     });
 
-    // También detener el arrastre si el mouse sale del área del visor
     viewer.addEventListener('mouseleave', () => {
       isDragging = false;
-      viewer.style.cursor = "grab"; // Volver al cursor original
+      viewer.style.cursor = "grab";
     });
 
-    // Detectar el movimiento del mouse mientras el botón está presionado
     viewer.addEventListener('mousemove', (event) => {
       if (isDragging) {
-        const diff = event.pageX - startX; // Diferencia en la posición del mouse
-
-        // Solo actualizamos si la diferencia es significativa para evitar cambios rápidos
-        if (Math.abs(diff) > 5) {
-          startX = event.pageX; // Actualizar la posición inicial para el próximo movimiento
-          currentFrame += diff < 0 ? 1 : -1; // Invertir el frame: al mover a la derecha, decrementamos el frame
-
-          // Ciclar a través de los frames
-          if (currentFrame > totalFrames) currentFrame = 1;
-          if (currentFrame < 1) currentFrame = totalFrames;
-
-          updateImage(); // Actualizar la imagen con el nuevo frame
-        }
+        const diff = event.pageX - startX;
+        handleMouseDrag(diff);
+        startX = event.pageX;
       }
     });
 
-    // Función para actualizar la imagen
-    function updateImage() {
-      productImage.src = `images/${currentColor}/${currentFrame}.png`; // Cambiar la imagen según el frame actual y el color
+    // --- Función específica para manejar el arrastre con el mouse ---
+    function handleMouseDrag(diff) {
+      accumulatedMovement += diff;
+
+      // Manejamos el movimiento acumulado para ambos lados
+      if (Math.abs(accumulatedMovement) > frameChangeThreshold) {
+        const framesToMove = Math.floor(accumulatedMovement / frameChangeThreshold);
+        currentFrame -= framesToMove; // Invertimos el signo para cambiar el sentido de giro
+
+        // Ciclar a través de los frames
+        if (currentFrame > totalFrames) currentFrame = 1;
+        if (currentFrame < 1) currentFrame = totalFrames;
+
+        updateImage();
+
+        // Restar el movimiento acumulado correctamente para evitar desincronización
+        accumulatedMovement = accumulatedMovement % frameChangeThreshold;
+      }
     }
 
-    // Cambiar el color del producto cuando se selecciona un botón
+    // --- Controladores para dispositivos táctiles ---
+    viewer.addEventListener('touchstart', (event) => {
+      if (event.touches.length === 1) { // Solo manejamos un toque
+        isDragging = true;
+        startX = event.touches[0].pageX;
+      }
+    });
+
+    viewer.addEventListener('touchend', () => {
+      isDragging = false;
+    });
+
+    viewer.addEventListener('touchmove', (event) => {
+      if (isDragging && event.touches.length === 1) {
+        const diff = event.touches[0].pageX - startX;
+        handleTouchDrag(diff);
+        startX = event.touches[0].pageX;
+      }
+    });
+
+    // --- Función específica para manejar el arrastre con touch ---
+    function handleTouchDrag(diff) {
+      accumulatedMovement += diff;
+
+      // Manejamos el movimiento acumulado para touch
+      if (Math.abs(accumulatedMovement) > frameChangeThreshold) {
+        const framesToMove = Math.floor(accumulatedMovement / frameChangeThreshold);
+        currentFrame -= framesToMove; // Invertimos el signo para cambiar el sentido de giro
+
+        // Ciclar a través de los frames
+        if (currentFrame > totalFrames) currentFrame = 1;
+        if (currentFrame < 1) currentFrame = totalFrames;
+
+        updateImage();
+
+        // Restar el movimiento acumulado correctamente para evitar desincronización
+        accumulatedMovement = accumulatedMovement % frameChangeThreshold;
+      }
+    }
+
+    // Función para actualizar la imagen
+    function updateImage() {
+      productImage.src = `images/${currentColor}/${currentFrame}.png`;
+    }
+
+    // Cambiar color
     const colorButtons = document.querySelectorAll('button[data-color]');
     colorButtons.forEach(button => {
       button.addEventListener('click', () => {
-        currentColor = button.getAttribute('data-color'); // Obtener el color seleccionado
-        currentFrame = 1; // Reiniciar al frame 1 al cambiar el color
-        updateImage(); // Actualizar la imagen con el nuevo color
+        currentColor = button.getAttribute('data-color');
+        currentFrame = 1; 
+        updateImage();
       });
     });
   </script>
