--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <div class="flex space-x-4">
     <button class="bg-white text-black px-4 py-2 rounded" data-color="white">Blanco</button>
     <button class="bg-blue-500 text-white px-4 py-2 rounded" data-color="blue">Azul</button>
-    <button class="bg-green-500 text-white px-4 py-2 rounded" data-color="green">Rojo</button>
+    <button class="bg-red-500 text-white px-4 py-2 rounded" data-color="green">Rojo</button>
   </div>
 
   <script>
