--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <!-- Botones para cambiar de color -->
   <div class="flex space-x-4">
     <button class="bg-white text-black px-4 py-2 rounded" data-color="white">Blanco</button>
-    <button class="bg-blue-500 text-white px-4 py-2 rounded" data-color="blue">Azul</button>
+    <!--<button class="bg-blue-500 text-white px-4 py-2 rounded" data-color="blue">Azul</button>-->
     <button class="bg-red-500 text-white px-4 py-2 rounded" data-color="green">Rojo</button>
   </div>
 
