--- a/index4.html
+++ b/index4.html
@@ -17,18 +17,16 @@
 
     .viewer {
       width: 100%;
-      min-width: 600px; /* Ancho máximo del visor */
+      min-width: 600px; /* Ancho mínimo del visor */
       height: 316px; /* Alto del visor basado en la altura del sprite */
       overflow: hidden;
       cursor: grab;
       background-image: url('corolla-images.png'); /* Ruta de la imagen del sprite */
       background-size: 3000% 100%; /* Escalado para cubrir 30 fotogramas en el ancho */
       background-position: 0 0; /* Posición inicial */
-      transition: transform 0.2s ease-in-out;
-            
+      transition: transform 0.2s ease-in-out; /* Transición suave */
     }
 
-    /* Cambio del cursor cuando está en modo de arrastre */
     .viewer:active {
       cursor: grabbing;
       transform: scale(1.015);
