--- a/index4.html
+++ b/index4.html
@@ -3,57 +3,47 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Visor 360° Ajustado y Fluido</title>
+  <title>Visor 360° con Selector de Color</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    .viewer-container {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      background-color: #f3f4f6;
-    }
-
-    .viewer {
-      width: 600px;
-      height: 316px;
-      overflow: hidden;
-      cursor: grab;
-      background-size: 3000% 100%;
-      background-position: 0 0;
-      transition: transform 0.1s ease;
-    }
-
-    
-  </style>
 </head>
-<body class="bg-gray-100 flex flex-col items-center justify-center min-h-screen">
+<body class="bg-gray-100 flex items-center justify-center min-h-screen">
   
-  <div class="viewer-container bg-red-300">
-    <div class="viewer bg-white" id="viewer"></div>
+  <div class="flex flex-col items-center space-y-4">
+    <!-- Visor 360° -->
+    <div class="w-[600px] h-[316px] overflow-hidden cursor-grab bg-cover bg-no-repeat bg-[url('corolla-red.png')] transition-transform ease-out duration-100 active:scale-105" id="viewer"></div>
+    
+    <!-- Selectores de Color -->
+    <div class="flex space-x-4">
+      <button class="w-10 h-10 rounded-full border-2 border-gray-300 bg-red-500 hover:scale-110 transition-transform duration-200 color-button" data-color="red"></button>
+      <button class="w-10 h-10 rounded-full border-2 border-gray-300 bg-blue-500 hover:scale-110 transition-transform duration-200 color-button" data-color="blue"></button>
+      <button class="w-10 h-10 rounded-full border-2 border-gray-300 bg-white hover:scale-110 transition-transform duration-200 color-button" data-color="white"></button>
+    </div>
   </div>
 
   <script>
-    const totalFrames = 30;
-    let currentFrame = 0;
-    let isDragging = false;
-    let startX = 0;
-    const frameWidthPercentage = 100 / totalFrames;
-    const viewer = document.getElementById('viewer');
+    const totalFrames = 30; // Número total de fotogramas
+    let currentFrame = 0; // Fotograma actual
+    let isDragging = false; // Indica si se está arrastrando el ratón o el dedo táctil para rotar el visor 360° 
+    let startX = 0; // Posición inicial del arrastre en el eje X en píxeles 
+    const frameWidthPercentage = 100 / totalFrames; // Ancho de cada fotograma en porcentaje 
+    const viewer = document.getElementById('viewer'); // Elemento contenedor del visor 360° 
 
+    // Función para cambiar el sprite según el color seleccionado
+    function changeColor(color) {
+      viewer.style.backgroundImage = `url('corolla-${color}.png')`;
+      currentFrame = 0; // Reinicia al primer fotograma al cambiar de color
+      viewer.style.backgroundPosition = `0 0`; // Asegura que comience desde el inicio
+    }
+
+    // Actualizar el fotograma mostrado en función del movimiento del arrastre
     function updateFrame(diffX) {
-      // Calcular los fotogramas a avanzar basado en la dirección
       if (diffX > 20) {
-        // Avanzar hacia la derecha
         currentFrame = (currentFrame + 1) % totalFrames;
-        startX += 20; // Ajuste de inicio para evitar acumulación
+        startX += 20;
       } else if (diffX < -20) {
-        // Avanzar hacia la izquierda
         currentFrame = (currentFrame - 1 + totalFrames) % totalFrames;
         startX -= 20;
       }
-
-      // Actualizar posición de fondo para mostrar el fotograma actual
       const offsetX = currentFrame * frameWidthPercentage;
       viewer.style.backgroundPosition = `${offsetX}% 0`;
     }
@@ -67,18 +57,18 @@
     viewer.addEventListener('mousedown', (event) => {
       isDragging = true;
       startX = event.pageX;
-      viewer.style.cursor = "grabbing";
+      viewer.classList.add("cursor-grabbing");
       requestAnimationFrame(animate);
     });
 
     viewer.addEventListener('mouseup', () => {
       isDragging = false;
-      viewer.style.cursor = "grab";
+      viewer.classList.remove("cursor-grabbing");
     });
 
     viewer.addEventListener('mouseleave', () => {
       isDragging = false;
-      viewer.style.cursor = "grab";
+      viewer.classList.remove("cursor-grabbing");
     });
 
     viewer.addEventListener('mousemove', (event) => {
@@ -106,10 +96,18 @@
       }
     });
 
+    // Selector de color
+    document.querySelectorAll('.color-button').forEach(button => {
+      button.addEventListener('click', () => {
+        const color = button.getAttribute('data-color');
+        changeColor(color);
+      });
+    });
+
     // Carga diferida del sprite solo cuando esté visible
     const spriteObserver = new IntersectionObserver(entries => {
       if (entries[0].isIntersecting) {
-        viewer.style.backgroundImage = "url('corolla-images.png')";
+        viewer.style.backgroundImage = "url('corolla-red.png')"; // Carga inicial
         spriteObserver.disconnect();
       }
     }, { threshold: 0.1 });
