--- a/index4.html
+++ b/index4.html
@@ -19,7 +19,11 @@
 
     <!-- Visor 360° -->
     <div class="w-[600px] h-[316px] overflow-hidden cursor-grab bg-cover bg-no-repeat bg-[url('/corolla/corolla-xli-red.png')] transition-transform ease-out duration-100 active:scale-105" id="viewer"></div>
-    
+    <div class="flex space-x-4">
+      <p><</p>
+      <p>Arrastre para girar</p>
+      <p>></p>
+    </div>
     <!-- Selectores de Color -->
     <div class="flex space-x-4">
       <button class="w-10 h-10 rounded-full border-2 border-gray-300 bg-red-500 hover:scale-110 transition-transform duration-200 color-button" data-color="red"></button>
